RESOLVED FIXED208882
[PlayStation] incomplete type 'WebCore::ScrollingStateFrameScrollingNode' named in nested name specifier
https://bugs.webkit.org/show_bug.cgi?id=208882
Summary [PlayStation] incomplete type 'WebCore::ScrollingStateFrameScrollingNode' nam...
Stephan Szabo
Reported 2020-03-10 14:20:29 PDT
We started seeing errors in the ENABLE(SCROLLING_THREAD) block with: ../../Source/WebCore\page/scrolling/ScrollingTreeScrollingNode.cpp:98:34: error: incomplete type 'WebCore::ScrollingStateFrameScrollingNode' named in nested name specifier if (state.hasChangedProperty(ScrollingStateFrameScrollingNode::ReasonsForSynchronousScrolling))
Attachments
Patch (1.33 KB, patch)
2020-03-10 14:23 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-03-10 14:23:37 PDT
Created attachment 393178 [details] Patch Adding include for ScrollingStateFrameScrollingNode, checking if this is okay on the various EWS bots.
Ross Kirsling
Comment 2 2020-03-10 15:17:51 PDT
Comment on attachment 393178 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393178&action=review Seems like more than a PS port fix, this is a missing include from r258012? > Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.cpp:34 > +#if ENABLE(SCROLLING_THREAD) > +#include "ScrollingStateFrameScrollingNode.h" > +#endif Judging from other CPP files that include this, I think you can probably get away without guarding the include.
Stephan Szabo
Comment 3 2020-03-10 15:26:18 PDT
I'm not sure if anyone else is hitting the code in question with the combination of enable flags, but noticed it from the PlayStation buildbot. I'd figured I'd guard the include to prevent bringing in the full include for cases that were okay with just the forward declaration, but can do it unconditionally.
WebKit Commit Bot
Comment 4 2020-03-10 16:36:43 PDT
Comment on attachment 393178 [details] Patch Clearing flags on attachment: 393178 Committed r258238: <https://trac.webkit.org/changeset/258238>
WebKit Commit Bot
Comment 5 2020-03-10 16:36:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2020-03-10 16:37:16 PDT
Note You need to log in before you can comment on or make changes to this bug.