[PlayStation] incomplete type 'WebCore::ScrollingStateFrameScrollingNode' named in nested name specifier https://bugs.webkit.org/show_bug.cgi?id=208882

Reviewed by Simon Fraser.

No new tests, build fix.

* page/scrolling/ScrollingTreeScrollingNode.cpp:
  Add include of ScrollingStateFrameScrollingNode
  when ENABLE(SCROLLING_THREAD) is true.


Canonical link: https://commits.webkit.org/221820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258238 268f45cc-cd09-0410-ab3c-d52691b4dbfc